--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>틱택토</title>
-    <style>
-        table {
-            border-collapse: collapse;
-        }
-        td {
-            border: 1px solid black;
-            width: 70px;
-            height: 70px;
-            text-align: center;
-            font-size: 50px;
-            font-weight: bold;
-        }
-    </style>
+<head> 
+<meta-charset="utf-8"> </meta-charset>
+<title></title>
+<style>
+    table{ border-collapse:collapse;}
+    td{
+        border:3px solid gray;
+        width:80px; height:80px;
+        text-align: center;
+        color:gray;
+        font-size: 60px; font-weight: bold;
+        
+    }
+
+</style>
 </head>
+
 <body>
-    <br><br>
+    <br>
     <div style='font-size: 15pt;'>
     컴퓨터와 틱택토 대결 <br>
-    사람은 X팀, 컴퓨터는 O팀 <br>
+    사람이 먼저 플레이하고 컴퓨터가 나중에 플레이<br>
     </div>
     <br><br>
-    <script src="0520틱택토.js"></script>
+    <script src="tictactoe.js"></script>
 </body>
 </html>
