--- a/lottery.html
+++ b/lottery.html
@@ -9,14 +9,14 @@
         <div style="text-align: center; font-size: 20pt;">이번 주 당첨 예상 숫자를 알려드려요</div>
         <br><br><br><br>
 
-        <div style="text-align: center; font-size: 25pt;">로또 당첨 숫자</div> <br>
+        <div style="text-align: center; font-size: 20pt;">로또 당첨 숫자</div> <br>
         <div id='결과창' style="text-align: center;"></div> <br><br>
-        <div style="text-align: center; font-size: 25pt;">보너스 숫자</div> <br>
+        <div style="text-align: center; font-size: 20pt;">보너스 숫자</div> <br>
         <div id='보너스' style="text-align: center; "></div>
         
-        <script src="0520 로또추첨.js"></script>
+        <script src="lottery.js"></script>
         <br><br>
-        <div id='응원' style="text-align: center; "></div>
+        <div id='응원' style="text-align: center; font-size:25pt;"></div>
  
     </body>
 </html>
