--- a/rockscissorpaper.html
+++ b/rockscissorpaper.html
@@ -25,6 +25,6 @@
         </div>
         <br>
         <div id="result" style="text-align: center; font-size:15pt;"> </div>
-        <script src="rock.js"></script>
+        <script src="rockscissorpaper.js"></script>
     </body>
 </html>
