--- a/rockscissorpaper.html
+++ b/rockscissorpaper.html
@@ -2,14 +2,9 @@
 <html>
     <head>
         <meta-charset="utf-8"></meta-charset>
+        <link rel="stylesheet" href="rock.css">
     </head>
-    <style>
-        #picture{
-            width:280px; height:350px;
-            background-position: 0 0;
-            display: block; margin: 0px auto;
-        }
-    </style>
+    
     <body>
         <br>
         <div id="text" style="text-align: center; font-size:20pt;">
