--- a/lottery.html
+++ b/lottery.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="lottery.css">    
+        <title>로또 번호 추첨기</title>
     </head>
     <body>
         <div class="bg">
