--- a/rockscissorpaper.html
+++ b/rockscissorpaper.html
@@ -2,24 +2,25 @@
 <html>
     <head>
         <meta-charset="utf-8"></meta-charset>
+        <title>가위바위보 게임</title>
         <link rel="stylesheet" href="rock.css">
     </head>
     
     <body>
         <br>
-        <div id="text" style="text-align: center; font-size:20pt;">
+        <div id="title">
             컴퓨터와 가위바위보 한 판
         </div>
         <br>
         <div id="picture"></div>
         <br>
-        <div style="text-align: center;">
-            <button id="가위" class="btn" style="font-size: 15pt;">가위</button>
-            <button id="바위" class="btn" style="font-size: 15pt;">바위</button>
-            <button id="보" class="btn" style="font-size: 15pt;">보</button>
+        <div class="buttons">
+            <button id="가위" class="btn">가위</button>
+            <button id="바위" class="btn">바위</button>
+            <button id="보" class="btn">보</button>
         </div>
         <br>
-        <div id="result" style="text-align: center; font-size:15pt;"> </div>
+        <div id="result"> </div>
         <script src="rockscissorpaper.js"></script>
     </body>
 </html>
