Modified css design

--- a/matching_game.html
+++ b/matching_game.html
@@ -3,44 +3,10 @@
 <head>
     <meta-charset="utf-8"/>
     <title>카드 짝 맞추는 기억력 게임</title>
-
-    <style>
-        .card{
-            display:inline-block;
-            margin-right:20px;
-            margin-bottom: 20px;
-            width:70px;
-            height:100px;
-            perspective:140px;
-        }
-
-        .card-inner{
-            position:relative;
-            width:100%; height:100%;
-            text-align:center; transition:transform 0.8s;
-            transform-style: preserve-3d;
-        }
-
-        .card.flipped .card-inner{
-            transform:rotateY(180deg);
-        }
-
-        .card-front{ 
-            background:black; border:5px ridge grey;
-            background-size:70px;}
-        
-        .card-front, .card-back{
-            position:absolute;
-            width:100%; height:100%;
-            backface-visibility:hidden;
-        }
-
-        .card-back{
-            transform:rotateY(180deg);
-        }
-    </style>
+    <link rel="stylesheet" href="matching.css">
 </head>
 <body>
+    <h2>같은 색깔 카드끼리 짝 맞추는 기억력 게임</h2>
     <br>
     <div id="pack"></div>
     <p id="record"></p>
