--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head> 
-<meta-charset="utf-8"> </meta-charset>
-<title></title>
-<style>
-    table{ border-collapse:collapse;}
-    td{
-        border:3px solid gray;
-        width:80px; height:80px;
-        text-align: center;
-        color:gray;
-        font-size: 60px; font-weight: bold;
-        
-    }
-
-</style>
+    <meta-charset="utf-8"> </meta-charset>
+    <title>컴퓨터와 틱택토 대결</title>
+    <link rel="stylesheet" href="tictactoe.css">
 </head>
 
 <body>
     <br>
-    <div style='font-size: 15pt;'>
-    컴퓨터와 틱택토 대결 <br>
-    사람이 먼저 플레이하고 컴퓨터가 나중에 플레이<br>
+    <div class="text">
+        컴퓨터와 틱택토 대결 <br><br>
+        사람이 먼저 컴퓨터가 나중에<br>
     </div>
     <br><br>
     <script src="tictactoe.js"></script>
