--- a/rockscissorpaper.html
+++ b/rockscissorpaper.html
@@ -12,11 +12,11 @@
             컴퓨터와 가위바위보 한 판
         </div>
         <br>
-        <div id="picture"></div>
+        <div id="picture" alt="계속 움직이는 손"></div>
         <br>
         <div class="buttons">
             <button id="가위" class="btn">가위</button>
-            <button id="바위" class="btn">바위</button>
+            <button id="바위" class="btn" >바위</button>
             <button id="보" class="btn">보</button>
         </div>
         <br>
